--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
     "vite": "^4.4.2",
     "vitest": "^0.32.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@prisma/client": "^5.5.2",
+    "zod": "^3.22.4"
+  }
 }
