--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@playwright/test": "^1.28.1",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.20.4",
+    "@types/line-by-line": "^0.1.9",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.28.0",
@@ -37,6 +38,7 @@
   "type": "module",
   "dependencies": {
     "@prisma/client": "^5.5.2",
+    "line-by-line": "^0.1.6",
     "zod": "^3.22.4"
   }
 }
